examples/test/testpolicy1086.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1086
  namespace: namespace353
spec:
  podSelector:
    matchLabels:
      key37: value13
      key26: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value38
      podSelector:
        matchLabels:
          key47: value42
          key48: value44
